// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpinionLink /> should render a colored list-group-item if author is vip 1`] = `
<ListGroup
  bsClass="list-group"
  className="opinion list-group-custom mb-0"
>
  <ListGroupItem
    bsClass="list-group-item"
    className="bg-vip list-group-item__opinion"
    listItem={false}
  >
    <div
      className="left-block"
    >
      <OpinionPreview
        link={true}
        opinion={
          Object {
            "author": Object {
              "vip": true,
            },
          }
        }
        rankingThreshold={null}
        showTypeLabel={true}
      />
    </div>
  </ListGroupItem>
</ListGroup>
`;

exports[`<OpinionLink /> should render a white list-group-item if not vip 1`] = `
<ListGroup
  bsClass="list-group"
  className="opinion list-group-custom mb-0"
>
  <ListGroupItem
    bsClass="list-group-item"
    className="list-group-item__opinion"
    listItem={false}
  >
    <div
      className="left-block"
    >
      <OpinionPreview
        link={true}
        opinion={
          Object {
            "author": Object {
              "vip": false,
            },
          }
        }
        rankingThreshold={null}
        showTypeLabel={true}
      />
    </div>
  </ListGroupItem>
</ListGroup>
`;
